# open-med-calc

./: .gitignore  .wranglerignore  Dockerfile  Makefile  README.md  assistant_functions.json  docker-compose.yml  main.py  model_classes.py  prestart.sh  pyproject.toml  requirements.txt  variable_descriptions.py  worker.py  wrangler.jsonc  wrangler.toml
app/: main.py
calculator_docs/: caprini-vte.md  meld.md
calculator_docs/full_calculator_pages/: caprini-vte.md  meld-na.md  meld.md  psi-port.md  wells-dvt.md
calculator_docs/short_calculator_info/: meld-na.md  psi-port.md
docker/: Dockerfile  docker-compose.yml
docker/open-med-calc-local/: docker-compose.yml
docker/open-med-calc-remote/: docker-compose.yml
docs/: meld.md  notes.md
src/: worker.py
static/css/: openmedcalc.webflow.css
static/js/: webflow.js
templates/: about.html  blank.html  contact.html  index.html
