[project]
name = "open-med-calc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.6.0",
    "anyio==3.7.1",
    "asttokens==2.4.1",
    "click==8.1.7",
    "decorator==5.1.1",
    "executing==2.0.1",
    "fastapi==0.104.1",
    "h11==0.14.0",
    "httptools==0.6.1",
    "idna==3.4",
    "ipython==8.18.1",
    "jedi==0.19.1",
    "jinja2==3.1.2",
    "markdown==3.5.1",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.3",
    "matplotlib-inline==0.1.6",
    "mdurl==0.1.2",
    "numpy==1.26.2",
    "pandas==2.1.3",
    "parso==0.8.3",
    "pexpect==4.9.0",
    "prompt-toolkit==3.0.41",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pydantic==2.4.2",
    "pydantic-core==2.10.1",
    "pygments==2.17.2",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "pytz==2023.3.post1",
    "pyyaml==6.0.1",
    "rich==13.7.0",
    "six==1.16.0",
    "sniffio==1.3.0",
    "stack-data==0.6.3",
    "starlette==0.27.0",
    "tabulate==0.9.0",
    "traitlets==5.14.0",
    "typing-extensions==4.8.0",
    "tzdata==2023.3",
    "uvicorn==0.24.0.post1",
    "uvloop==0.19.0",
    "watchfiles==0.21.0",
    "wcwidth==0.2.12",
    "websockets==12.0",
]
